--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,3 +1,3 @@
 <p><%= @tweet.content %></p>
 
-<%= render @tweet.replies %>
+<%= react_component('ReplyList', {replies: raw(render(template: "replies/index.json.jbuilder"))}) %>
